--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html>
 	<head>
-		<title>WebGL - Rotating Cube</title>
+		<title>Daniel Gestsson</title>
 	</head>
 	<body onload="InitDemo();">
-		<canvas id="game-surface" width="800" height="600">
+		<canvas id="game-surface" width="1000" height="800">
 			Your browser does not support HTML5
 		</canvas>
 		<br />
-		<i>Demo is above this text</i>
 		<script src="gl-matrix.js"></script>
 		<script src="app.js"></script>
 	</body>
